--- a/index.html
+++ b/index.html
@@ -132,14 +132,20 @@
                                         <div class="img-anim-portrait">
                                             <picture>
                                                 <source media="(max-width: 38em)" srcset="assets/img/the-cradle-blue-hour-s.jpg?v=1612187137912">
-                                                <img class="img img-fluid" alt="Hari Builders" src="assets/img/the-cradle-blue-hour.jpg?v=1612187137912?v=8e7f331d967da96a391f1edca691130f">
+                                                <img class="img img-fluid" alt="Hari Builders" src="assets/img/latest/main_1.jpg">
                                             </picture>
                                         </div>
                                     </div>
                                     <div class="col-md-5 col-lg-5 mb-6 offset-md-0 pl-md-6 ml-md-4 mt-md--5 order-1 order-md-2 logo">
-                                        <h2>Welcome to Hari Builders</h2> <hr>
+                                        <h1 style="color: #003049; font-weight: bold; margin-bottom: 10px;">Hari Builders</h1>
+                                        <h2 style="color: #003049; font-weight: bold; margin-bottom: 10px;">Construction & Real Estate</h2>
+                                        <h1 style="color: #d62828; font-weight: bold; margin-bottom: 10px;">Er. P. Hariharan M.E.</h1>
+                                        <h2 style="color: #d62828; font-weight: bold; margin-bottom: 10px;"">99408 24184</h2>
+                                        
+                                        <hr style="border: 1px solid #003049; margin: 20px 0;">
                                         <h3 class="lead">
-                                            Hari Builders is one of the leading builder and promoter in Trichy, Perambalur & Thuraiyur. Hari Builders has grown into one of the most awarded companies in state acclaimed for its transparent business practices and innovation. Powered by a team of more than 50 top-notch professionals and driven by the core values of 'Passion, Principles and Performance, Hari Builders has now earned the respect of peers in the construction industry and the admiration of hundreds of delighted customers.
+                                            <h2 style="color: #003049; font-weight: bold; margin-bottom: 10px;">Welcome to Hari Builders</h2>
+                                             Hari Builders is one of the leading builder and promoter in Trichy, Perambalur & Thuraiyur. Hari Builders has grown into one of the most awarded companies in state acclaimed for its transparent business practices and innovation. Powered by a team of more than 50 top-notch professionals and driven by the core values of 'Passion, Principles and Performance, Hari Builders has now earned the respect of peers in the construction industry and the admiration of hundreds of delighted customers.
                                         </h3>
                                         
                                     </div>
