--- a/index.html
+++ b/index.html
@@ -397,27 +397,24 @@
   padding:0px;
 }
 </style>
+
         <div id="gallery" class="container-fluid">  
-            <img src="https://source.unsplash.com/1600x1200?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/1024x768?female,portrait" class="img-responsive">
-             <img src="https://source.unsplash.com/1366x768?female,portrait" class="img-responsive">
-            <video class="vid" controls>
-              <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-              </source>
-            </video>
-            <img src="https://source.unsplash.com/1920x1080?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/640x360?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/320x640?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/1200x1600?female,portrait" class="card img-responsive">
-            <img src="https://source.unsplash.com/800x600?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/600x800?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/400x600?female,portrait" class="img-responsive">
-            <img src="https://source.unsplash.com/600x400?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/1100x1600?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/1600x1100?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/992x768?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/768x992?female,portrait" class="img-responsive">
-          
+            <img src="assets/img/latest/best builder thuraiyur.jpg" class="img-responsive">
+            <img src="assets/img/latest/Builders in Thuraiyur.jpg" class="img-responsive">
+             <img src="assets/img/latest/building approval.jpg" class="img-responsive">
+            <img src="assets/img/latest/building contractor .jpg" class="img-responsive">
+            <img src="assets/img/latest/building plan.png" class="img-responsive">
+          <img src="assets/img/latest/building-plans.jpg"class="img-responsive">
+            <img src="assets/img/latest/civil engineer.jpg" class="card img-responsive">
+            <img src="assets/img/latest/musiri building.png" class="img-responsive">
+            <img src="assets/img/latest/thuraiyur building house.jpg" class="img-responsive">
+            <img src="assets/img/latest/thuraiyur building.jpg" class="img-responsive">
+            <img src="assets/img/latest/thuraiyur contractor.jpg" class="img-responsive">
+          <img src="assets/img/latest/thuraiyur house building.jpg" class="img-responsive">
+          <img src="assets/img/latest/thuraiyur interior.jpg" class="img-responsive">
+          <img src="assets/img/latest/thuraiyur trichy .jpg" class="img-responsive">
+          <img src="assets/img/latest/trichy house.jpg" class="img-responsive">
+          <img src="assets/img/latest/thuraiyur.jpg" class="img-responsive">
           </div>
           
           <div id="myModal" class="modal fade" role="dialog">
