--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                     <div class="col-md-5 offset-md-1 mb-5 mb-md-0 order-2 order-md-1">
                                         <div class="img-anim-portrait">
                                             <picture>
-                                                <source media="(max-width: 38em)" srcset="assets/img/the-cradle-blue-hour-s.jpg?v=1612187137912">
+                                                <source media="(max-width: 38em)" srcset="assets/img/latest/main_1.jpg">
                                                 <img class="img img-fluid" alt="Hari Builders" src="assets/img/latest/main_1.jpg">
                                             </picture>
                                         </div>
