--- a/services.html
+++ b/services.html
@@ -66,6 +66,15 @@
         <!-- Revolution Slider -->
         <link rel="stylesheet" href="plugins/rs-plugin-6.custom/css/rs6.css">
         <link rel='stylesheet' href='css/style-demo.css'>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DLHQ0TTBHK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DLHQ0TTBHK');
+</script>
     </head>
     <body class="home page-template-default page template-slider color-custom style-default button-flat layout-full-width if-zoom no-content-padding header-transparent header-fw minimalist-header-no sticky-header sticky-tb-color ab-hide subheader-both-left menu-line-below-80 menuo-right menuo-no-borders mobile-tb-center mobile-side-slide mobile-mini-mr-ll tablet-sticky mobile-header-mini mobile-sticky">
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
