--- a/index.html
+++ b/index.html
@@ -151,10 +151,14 @@
     </style>
 
            <header>
+            <img src="assets/img/latest/logo.jpg" alt="">
             <div class="container-fluid">
+                <img src="assets/img/latest/logo.jpg" alt="">
                 <div class="row align-items-md-center">
+                    <img src="assets/img/latest/logo.jpg" alt="">
                     <div id="logo-type" class="col-auto d-none d-md-block order-md-2">Hari Builders</div>
                     <div id="logo-figure" class="col justify-content-md-end d-flex order-md-3">
+                        <img src="assets/img/latest/logo.jpg" alt="">
                     </div>
                     <div id="nav-toggle" class="order-md-1 hamburger hamburger--squeeze js-hamburger" >
                         <div class="hamburger-box">
